--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -17,3 +17,7 @@
 [[constraint]]
   name = "github.com/lib/pq"
   version = "1.1.1"
+
+[[constraint]]
+  name = "github.com/go-chi/cors"
+  version = "1.0.0"
